.kube/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdid-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdid-api
  template:
    metadata:
      labels:
        app: sdid-api
    spec:
      containers:
        - name: sdid-api
          image: ${IMAGE_WITH_TAG}
          ports:
            - containerPort: 3000
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 3000
          #   initialDelaySeconds: 3
          #   periodSeconds: 3
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdid-api-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdid-api-services
  template:
    metadata:
      labels:
        app: sdid-api-services
    spec:
      containers:
        - name: sdid-api-redis
          image: redis:4-alpine
          ports:
            - containerPort: 6379
          imagePullPolicy: IfNotPresent

        - name: sdid-api-pdf-service
          image: paralect/pdf-service
          ports:
            - containerPort: 3000
          imagePullPolicy: IfNotPresent
