.kube/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdid-api
spec:
  selector:
    app: sdid-api
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdid-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdid-api
  template:
    metadata:
      labels:
        app: sdid-api
    spec:
      containers:
        - name: sdid-api
          image: ${IMAGE_WITH_TAG}
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
