.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdid-api
spec:
  selector:
    app: sdid-api
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
