.kube/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdid-api
spec:
  selector:
    app: sdid-api
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: sdid-api-services
spec:
  selector:
    app: sdid-api-services
  ports:
    - name: pdf-service
      port: 3000
      targetPort: 3000
    - name: redis
      port: 6379
      targetPort: 6379
