.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdid-api

spec:
  rules:
    - host: api.sdid.itworks.expert
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sdid-api
                port:
                  number: 80
  tls:
    - secretName: sdid-api-tls
      hosts:
        - api.sdid.itworks.expert
