.kube/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdid-api-tls-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd

spec:
  rules:
    - host: api.sdid.itworks.expert
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sdid-api
                port:
                  number: 80
  tls:
    - secretName: sdid-api-tls
      hosts:
        - api.sdid.itworks.expert
